# ameijboom.com

./: .gitignore  BUILD  Cargo.toml  Dockerfile  MODULE.bazel  bun.lockb  package.json  skaffold.yaml  skaffold.yml
.github/workflows/: build.yml
frontend/: .dockerignore  Dockerfile  bun.lockb  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: Footer.tsx  Header.tsx  RecentTracks.tsx  Track.tsx
frontend/src/app/lib/: tracks.ts
get-token/: index.html  script.js
helm/: Chart.yaml  values.yaml
helm/templates/: frontend.yaml  music-api.yaml  secrets.yaml
music-api/: BUILD  Cargo.toml
music-api/src/: main.rs  models.rs  state.rs  token.rs
music-api/src/routes/: recent.rs
