[package]
name = "music-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["http2"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["env", "derive"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.8", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
